Support for Showing Team Avatars (#940)
Also redesigns the team@event view a bit to support this - adds a dropdown for events in the current year and also shows some info about the team
